--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.0.1",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
